Submit Button Styled

--- a/index.html
+++ b/index.html
@@ -126,6 +126,50 @@
     
 
 
+
+
+            .form__submit{
+                display:flex;
+                flex-direction: column;
+                justify-content: center;
+                margin: auto;
+                width: 200px;
+                padding: 60px 20px;
+            }
+
+            .form__submit-btn{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background: white;
+                font-family: inherit;
+                text-transform: uppercase;
+                color: #E6361F;
+                border: 2px solid #EE6A45;
+                height: 36px;
+                font-size: 15px;
+                box-shadow: 3px 3px rgba(61, 56, 52, 0.8);
+                transition: 0.3s;
+                padding: 18px;
+            }
+
+            .form__submit-btn-sparkles{
+                margin: auto;
+                width: 90px;
+                margin-bottom: 10px;
+            }
+
+
+         
+
+
+
+
+
+
+
+
+
             .footer{
                 background: #3D3834;
                 display: flex;
