Fun unnecessary help icon hover effect

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 line-height: 1.7;
                
             }
-    
 
              .banner{
                 display: flex;
@@ -211,7 +210,13 @@
             }
 
 
+            .help-icon:hover{
+                box-shadow: 2px 2px 4px rgba(61, 56, 52, 0.8);
+            }
 
+            .help-icon:hover .help-icon__info{
+                opacity: 1;
+            }
 
 
 
