Fixing the media query for the footer

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
+                justify-content: space-around;
                 gap: 30px;
                 font-size: 16px;
                 padding: 50px 30px;
@@ -268,6 +269,13 @@
                 .banner{
                     height: 77px;
                 }
+
+                .footer {
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    text-align: center;
+    }
             }
 
     </Style>
@@ -414,8 +422,6 @@
                     el.classList.add('error')
                 }
             }
-
-        
 
     </script> 
     
